--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -1,12 +1,12 @@
-<form action="/admin/login" method="post">
+<form action="/admin/login" method="post" >
   <div class="mb-3">
-    <label for="exampleInputText1" class="form-label">Usuario</label>
-    <input type="text" class="form-control" id="imputUser" name="usuario">
+    <label  class="form-label">Usuario</label>
+    <input type="text" class="form-control" id="inputUser"  name="usuario">
    
   </div>
   <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+    <label  class="form-label">Contraseña</label>
+    <input type="password"  class="form-control" id="inputPassword" name="password">
   </div>
   <div class="mb-3 form-check">
     
