--- a/views/admin/home.hbs
+++ b/views/admin/home.hbs
@@ -1,6 +1,5 @@
 <div class="container" style="margin-top:50px;">
     <div class="row">
-        <p class="text-end">hola {{persona}} ! <a class="btn btn-danger" href="admin/login/logout">Cerrar sesión <i class="fas fa-sign-out-alt"></i></a></p>
-
+<p class="text-end">hola {{persona}} ! <a class="btn btn-danger" href="/admin/login/logout">Cerrar sesión <i class="fas fa-sign-out-alt"></i></a></p>
     </div>
     </div>
