--- a/views/admin/novedades.hbs
+++ b/views/admin/novedades.hbs
@@ -3,3 +3,14 @@
 <p class="text-end">hola {{persona}} ! <a class="btn btn-danger" href="/admin/login/logout">Cerrar sesión <i class="fas fa-sign-out-alt"></i></a></p>
     </div>
     </div>
+
+    <div class="row">
+    <div class="col-7">
+    <h1>Listado de Novedades</h1>
+</div>
+<div class="col-5 text-end">
+    <a class="btn btn-success" href=""><i class="fa fa-plus" aria-hidden="true"></i>
+Nuevo </a>
+</div>
+
+    </div>
