--- a/views/admin/layout.hbs
+++ b/views/admin/layout.hbs
@@ -4,6 +4,7 @@
     <title>{{title}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> 
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    
   </head>
   <body>
     {{!-- <header>
@@ -18,7 +19,7 @@
     </div>
 </header> --}}
 <section id="hero">
-    <h1>GONZALO SANCHEZ FULL STACK DEVELOPER</h1>
+    {{!-- <h1>GONZALO SANCHEZ FULL STACK DEVELOPER</h1> --}}
        {{{body}}}
     
 </section>
